--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background: orchid;">
 <div id="wrapper">    
     <h1 id="title"> Totally Trivial Trivia !</h1>
     <div id="subwrapper"> 
